--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -240,6 +240,23 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	
+	<reporting>
+
+	  <plugins>
+	     <plugin>
+	           <groupId>org.codehaus.mojo</groupId>
+	           <artifactId>findbugs-maven-plugin</artifactId>
+	           <version>2.5.2</version>
+	           <configuration>
+	              <findbugsXmlOutput>true</findbugsXmlOutput>
+	              <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+	              <xmlOutput>true</xmlOutput>
+	           </configuration>
+	        </plugin>
+	   </plugins>
+
+	</reporting>
 
 	<repositories>
 		<repository>
