findbugs ignore file added

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -252,6 +252,8 @@
 	              <findbugsXmlOutput>true</findbugsXmlOutput>
 	              <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
 	              <xmlOutput>true</xmlOutput>
+	              <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+	              <!-- <includeFilterFile>findbugs-include.xml</includeFilterFile> -->
 	           </configuration>
 	        </plugin>
 	   </plugins>
