--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -69,6 +69,45 @@
 				<goals> <goal>jar</goal> </goals> </execution> <execution> <id>aggregate</id> 
 				<goals> <goal>aggregate</goal> </goals> <phase>site</phase> <configuration> 
 				</configuration> </execution> </executions> </plugin> -->
+				
+				
+				<plugin>
+		            <groupId>org.codehaus.mojo</groupId>
+		            <artifactId>findbugs-maven-plugin</artifactId>
+		            <version>2.5.2</version>
+		            <configuration>
+		               <findbugsXmlOutput>true</findbugsXmlOutput>
+		               <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+		               <xmlOutput>true</xmlOutput>
+		               <failOnError>false</failOnError>
+		               <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+		            </configuration>
+		            <executions>
+		               <execution>
+		                  <goals>
+		                     <goal>check</goal>
+		                  </goals>
+		               </execution>
+		            </executions>
+		         </plugin>
+		         <plugin>
+		            <groupId>org.apache.maven.plugins</groupId>
+		            <artifactId>maven-pmd-plugin</artifactId>
+		            <configuration>
+		               <sourceEncoding>utf-8</sourceEncoding>
+		               <minimumTokens>100</minimumTokens>
+		               <targetJdk>1.5</targetJdk>
+		               <format>xml</format>
+		               <failOnViolation>false</failOnViolation>
+		            </configuration>
+		            <executions>
+		               <execution>
+		                  <goals>
+		                     <goal>cpd-check</goal>
+		                  </goals>
+		               </execution>
+		            </executions>
+		         </plugin>
 
 		</plugins>
 
@@ -236,39 +275,16 @@
 						</goals> <id>restore-version-master</id> <phase>validate</phase> </execution> -->
 					<!-- </executions> -->
 				</plugin>
+				
+				<plugin>
+	               <groupId>org.apache.maven.plugins</groupId>
+	               <artifactId>maven-pmd-plugin</artifactId>
+	               <version>2.5</version>
+	            </plugin>
 
 			</plugins>
 		</pluginManagement>
 	</build>
-	
-	<reporting>
-	  <plugins>
-	  
-	     <plugin>
-	           <groupId>org.codehaus.mojo</groupId>
-	           <artifactId>findbugs-maven-plugin</artifactId>
-	           <version>2.5.2</version>
-	           <configuration>
-	              <findbugsXmlOutput>true</findbugsXmlOutput>
-	              <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-	              <xmlOutput>true</xmlOutput>
-	              <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
-	              <!-- <includeFilterFile>findbugs-include.xml</includeFilterFile> -->
-	           </configuration>
-	        </plugin>
-	        
-	        <plugin>
-            	<groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-            </plugin>
-            
-            <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-surefire-report-plugin</artifactId>
-            </plugin>
-            
-	   </plugins>
-	</reporting>
 
 	<repositories>
 		<repository>
