fixed: https://hudson.eclipse.org/dirigible/job/dirigible-nightly/648/findbugsResult/type.168293898/module.-216241333/file.-1802558909/

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -221,6 +221,25 @@
 										<ignore></ignore>
 									</action>
 								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											findbugs-maven-plugin
+										</artifactId>
+										<versionRange>
+											[3.0.1,)
+										</versionRange>
+										<goals>
+											<goal>check</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
