--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -87,6 +87,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.ide.editor.orion@start,\
   org.eclipse.dirigible.ide.editor.text@start,\
   org.eclipse.dirigible.ide.extensions.publish@start,\
+  org.eclipse.dirigible.ide.extensions.ui@start,\
   org.eclipse.dirigible.ide.integration.publish@start,\
   org.eclipse.dirigible.ide.publish@start,\
   org.eclipse.dirigible.ide.publish.ui@start,\
