--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.extensions.ui/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.extensions.ui/plugin.xml
@@ -8,10 +8,11 @@
             id="org.eclipse.dirigible.ide.extensions">
       </category>
       <view
-            name="Extensions Manager"
             category="org.eclipse.dirigible.ide.extensions"
             class="org.eclipse.dirigible.ide.extensions.ui.view.ExtensionsManagerView"
-            id="org.eclipse.dirigible.ide.extensions.view.ExtensionsManagerView">
+            icon="icons/wizard_extension-definition.png"
+            id="org.eclipse.dirigible.ide.extensions.view.ExtensionsManagerView"
+            name="Extensions Manager">
       </view>
    </extension>
 </plugin>
