--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -22,6 +22,7 @@ osgi.bundles=com.google.gson@start,\
   org.apache.felix.gogo.command@start,\
   org.apache.felix.gogo.runtime@start,\
   org.apache.felix.gogo.shell@start,\
+  org.apache.felix.scr@start,\
   org.apache.httpcomponents.httpclient@start,\
   org.apache.httpcomponents.httpcore@start,\
   org.apache.velocity@start,\
@@ -59,6 +60,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.equinox.util@start,\
   org.eclipse.help@start,\
   org.eclipse.jgit@start,\
+  org.eclipse.osgi.util@start,\
   org.eclipse.osgi.services@start,\
   org.eclipse.rap.jface@start,\
   org.eclipse.rap.jface.databinding@start,\
