--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -149,6 +149,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.runtime.scheduler@start,\
   org.eclipse.dirigible.runtime.init@start,\
   org.eclipse.dirigible.runtime.cmis@start,\
+  org.eclipse.dirigible.runtime.workspace@start,\
   org.quartz@start,\
   org.mozilla.javascript@start,\
   org.json@start,\
