--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
@@ -78,6 +78,7 @@
 		<module>org.eclipse.dirigible.runtime.scheduler</module>
 		<module>org.eclipse.dirigible.runtime.chrome.debugger</module>
         <module>org.eclipse.dirigible.runtime.cmis</module>
+        <module>org.eclipse.dirigible.runtime.workspace</module>
 	</modules>
 
 </project>
