fixed osgi loading

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<name>Releng - Air</name>
-	<artifactId>air.tomcat</artifactId>
+	<artifactId>air</artifactId>
 	<packaging>war</packaging>
 
 	<build>
