--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
@@ -209,6 +209,12 @@
 			<param-name>runTestsOnInit</param-name>
 			<param-value>false</param-value>
 		</init-param>
+		
+		<!-- Run on OSGi environment -->
+		<init-param>
+			<param-name>osgi</param-name>
+			<param-value>true</param-value>
+		</init-param>
 
 		<load-on-startup>2</load-on-startup>
 
