--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.external/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.external/pom.xml
@@ -100,6 +100,7 @@
 	</build>
 
 	<modules>
+        <module>org.json</module>
 		<module>external.feature</module>
 		<module>external.p2</module>
 	</modules>
