--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
@@ -134,15 +134,31 @@
 			<param-value>local</param-value>
 		</init-param>
 		
+		<!-- 
 		<init-param>
 			<param-name>localRepositoryRootFolder</param-name>
-			<param-value>.</param-value>
+			<param-value>dirigible/repository</param-value>
 		</init-param>
 		
 		<init-param>
 			<param-name>localRepositoryRootFolderIsAbsolute</param-name>
 			<param-value>false</param-value>
 		</init-param>
+		 -->
+		 
+		<!-- Default Local Database Folder  
+		<init-param>
+			<param-name>localDatabaseRootFolder</param-name>
+			<param-value>dirigible/derby</param-value>
+		</init-param>
+		-->
+		
+		<!-- Default Local CMIS Folder 
+		<init-param>
+			<param-name>localCmisRootFolder</param-name>
+			<param-value>dirigible/cmis</param-value>
+		</init-param>
+		-->
 		
 		<!-- Default Repository Provider Master (used for Initial Load or Reset) 
 		<init-param>
