--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/saptrial/web.xml
@@ -292,4 +292,8 @@
 		<res-type>com.sap.cloud.security.password.PasswordStorage</res-type>
 	</resource-ref>
 	
+	<listener>
+		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+	</listener>
+	
 </web-app>
