--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/trial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/trial/web.xml
@@ -214,5 +214,9 @@
   	</resource-ref>
 	
 	-->
+	
+	<listener>
+		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+	</listener>
 
 </web-app>
