--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/iam/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/iam/web.xml
@@ -250,36 +250,19 @@
 	</resource-ref>
 
 
-	<!-- Resource References 
-	
-	<resource-ref>
-    	<res-ref-name>connectivity/Configuration</res-ref-name>
-    	<res-type>com.sap.core.connectivity.api.configuration.ConnectivityConfiguration</res-type>
-	</resource-ref>
-	
-	<resource-ref>
-  		<res-ref-name>mail/SAPInternalNWCloudSession</res-ref-name>
-  	    <res-type>javax.mail.Session</res-type>
-  	</resource-ref>
-	
-	-->
-
 	<!-- Security -->
 	
+	<listener>
+		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+	</listener>
+
 	<login-config>
-		<auth-method>BASIC</auth-method>
-	</login-config>
-	
-	<!-- Remove comment when #109 is fixed
-	<login-config>
-		<auth-method>FORM</auth-method>
-		<realm-name>file</realm-name>
-		<form-login-config>
-			<form-login-page>/authentication/login.html</form-login-page>
-			<form-error-page>/authentication/error.html</form-error-page>
-		</form-login-config>
-	</login-config>
-  	-->
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+         	<form-login-page>/loginform.html</form-login-page>
+            <form-error-page>/loginerror.html</form-error-page>
+    	</form-login-config>
+    </login-config>
   	
   	<!-- IDE Services -->
 	<security-constraint>
