--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/sap/web.xml
@@ -292,20 +292,19 @@
 
 	<!-- Security -->
 	
+	<listener>
+		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+	</listener>
+
 	<login-config>
-		<auth-method>FORM</auth-method>
-	</login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+         	<form-login-page>/loginform.html</form-login-page>
+            <form-error-page>/loginerror.html</form-error-page>
+    	</form-login-config>
+    </login-config>
 	
-	<!-- Remove comment when #109 is fixed
-	<login-config>
-		<auth-method>FORM</auth-method>
-		<realm-name>file</realm-name>
-		<form-login-config>
-			<form-login-page>/authentication/login.html</form-login-page>
-			<form-error-page>/authentication/error.html</form-error-page>
-		</form-login-config>
-	</login-config>
-  	-->
+	
   	
   	<!-- IDE Services -->
 	<security-constraint>
