--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
@@ -160,7 +160,7 @@
 		</init-param>
 		-->
 		
-		<!-- Default Repository Provider Master (used for Initial Load or Reset) 
+		<!-- Default Repository Provider Master (used for Initial Load or Reset) - git, filesystem, zip
 		<init-param>
 			<param-name>repositoryProviderMaster</param-name>
 			<param-value>git</param-value>
