--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/pom.xml
@@ -130,6 +130,14 @@
 										<include name="*.war" />
 									</fileset>
 								</copy>
+								
+								<!-- Copy executable jar, if relevant -->
+								<copy todir="../../../../dist/${deployment.type}/${artifactId}/">
+									<fileset dir="${project.build.directory}">
+										<include name="*.jar" />
+										<exclude name="dont-use.jar" />
+									</fileset>
+								</copy>
 
 							</tasks>
 						</configuration>
