--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-	<display-name>Dirigible</display-name>
+	<display-name>Eclipse Dirigible - Cloud Development Platform [ALL-IN-ONE-SAP]</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
