--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/saptrial/web.xml
@@ -4,222 +4,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-	<display-name>Dirigible Cloud Toolkit</display-name>
+	<display-name>Eclipse Dirigible - Cloud Development Platform [AIR-SAP-TRIAL]</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-	
-	<servlet id="bridge">
-		<description>Equinox Bridge Servlet</description>
-		<display-name>Equinox Bridge Servlet</display-name>
-		<servlet-name>equinoxbridgeservlet</servlet-name>
-		<servlet-class>org.eclipse.dirigible.ide.bridge.DirigibleBridge</servlet-class>
-
-		<!-- Framework Controls could be useful for testing purpose, but we disable 
-			it per default -->
-		<init-param>
-			<param-name>enableFrameworkControls</param-name>
-			<param-value>false</param-value>
-		</init-param>
-
-		<!-- Enable multi-language support for the extension registry -->
-		<!-- the OSGi console is useful for trouble shooting but will fill up your 
-			appserver log quickly, so deactivate on production use. Uncomment the -console 
-			parameter to enabled OSGi console access. -->
-		<init-param>
-			<param-name>commandline</param-name>
-			<param-value>-registryMultiLanguage -console</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>extendedFrameworkExports</param-name>
-			<param-value>org.apache.naming.java,org.apache.tomcat.dbcp.dbcp</param-value>
-		</init-param>
-
-		<!-- Corresponding Runtime URL. Used by Registry Perspective, Log Service, etc. -->
-		<init-param>
-			<param-name>runtimeUrl</param-name>
-			<param-value>/@RUNTIME_URL@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>servicesUrl</param-name>
-			<param-value>/services</param-value>
-		</init-param>
-		
-		<!-- Enable usage of roles - Developer, Operators, etc. Default is true, false means Everyone can do anything -->
-		<init-param>
-			<param-name>enableRoles</param-name>
-			<param-value>false</param-value>
-		</init-param>
-		
-		<!-- Print logs in System output in addition to the standard logger. Workaround for some application servers -->
-		<init-param>
-			<param-name>logInSystemOutput</param-name>
-			<param-value>true</param-value>
-		</init-param>
-		
-		<!-- Type of the Default Database DataSource -->
-		<init-param>
-			<param-name>defaultDataSourceType</param-name>
-			<param-value>jndi</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the Default Database DataSource -->
-		<init-param>
-			<param-name>jndiDefaultDataSource</param-name>
-			<param-value>java:comp/env/jdbc/DefaultDB</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the Connectivity Service -->
-		<init-param>
-			<param-name>jndiConnectivityService</param-name>
-			<param-value>java:comp/env/connectivity/Configuration</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the Mail Service -->
-		<init-param>
-			<param-name>jndiMailService</param-name>
-			<param-value>java:comp/env/mail/SAPInternalNWCloudSession</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the CMIS Service -->
-		<init-param>
-			<param-name>jndiCmisService</param-name>
-			<param-value>java:comp/env/EcmService</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the CMIS Service - Authentication Method (key, destination) -->
-		<init-param>
-			<param-name>jndiCmisServiceAuth</param-name>
-			<param-value>key</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the CMIS Service - Name -->
-		<init-param>
-			<param-name>jndiCmisServiceName</param-name>
-			<param-value>cmis:dirigible</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the CMIS Service - Key -->
-		<init-param>
-			<param-name>jndiCmisServiceKey</param-name>
-			<param-value>cmis:dirigible:key</param-value>
-		</init-param>
-		
-		<!-- JNDI key for the Password Service -->
-		<init-param>
-			<param-name>jndiPasswordStorage</param-name>
-			<param-value>java:comp/env/PasswordStorage</param-value>
-		</init-param>
-		
-		<!-- Auto Commit property for JDBC connection --> 
-		<init-param>
-			<param-name>jdbcAutoCommit</param-name>
-			<param-value>false</param-value>  <!-- set to true in case of PostgreSQL -->
-		</init-param>
-		
-		<!-- Available JDBC connections count --> 
-		<init-param>
-			<param-name>jdbcMaxConnectionsCount</param-name>
-			<param-value>8</param-value>
-		</init-param>
-		
-		<!-- Maximum waiting timeout of a connection before to be considered as a hanging connection --> 
-		<init-param>
-			<param-name>jdbcWaitTimeout</param-name>
-			<param-value>500</param-value>
-		</init-param>
-		
-		<!-- Maximum number of tries to keep it alive, if free connections are still available --> 
-		<init-param>
-			<param-name>jdbcWaitCount</param-name>
-			<param-value>5</param-value>
-		</init-param>
-		
-		<!-- Default Repository Provider --> 
-		<init-param>
-			<param-name>repositoryProvider</param-name>
-			<!-- <param-value>db</param-value> --> 
-			 <param-value>local</param-value>
-		</init-param>
-		
-		<!-- Default Repository Provider Master (used for Initial Load or Reset) 
-		<init-param>
-			<param-name>repositoryProviderMaster</param-name>
-			<param-value>git</param-value>
-		</init-param>
-		-->
-		
-		<!-- Master Repository parameters - Git based 
-		<init-param>
-			<param-name>masterRepositoryGitTarget</param-name>
-			<param-value>master_git_repository</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>masterRepositoryGitLocation</param-name>
-			<param-value>https://github.com/delchev/master_repository_test.git</param-value>
-		</init-param>
-		
-		<!- -
-		<init-param>
-			<param-name>masterRepositoryGitUser</param-name>
-			<param-value>{git username}</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>masterRepositoryGitPassword</param-name>
-			<param-value>{git password}</param-value>
-		</init-param>
-		 - ->
-		 
-		<init-param>
-			<param-name>masterRepositoryGitBranch</param-name>
-			<param-value>origin/master</param-value>
-		</init-param>
-		
-		<!- -
-		<init-param>
-			<param-name>http.proxyHost</param-name>
-			<param-value>proxy</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>http.proxyPort</param-name>
-			<param-value>8080</param-value>
-		</init-param>
-		- ->
-		
-		-->
-		
-		<!-- Mail Service Provided --> 
-		<init-param>
-			<param-name>mailSender</param-name>
-			<param-value>provided</param-value>
-		</init-param>
-		
-		<!-- Default Home Location -->
-		<init-param>
-			<param-name>homeLocation</param-name>
-			<param-value>services/ui/index.html</param-value>
-		</init-param>
-		
-		<!-- Run the present Tests on the server start -->
-		<init-param>
-			<param-name>runTestsOnInit</param-name>
-			<param-value>false</param-value>
-		</init-param>
-
-		<load-on-startup>2</load-on-startup>
-
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>equinoxbridgeservlet</servlet-name>
-		<url-pattern>/services/*</url-pattern>
-	</servlet-mapping>
-	
+	</welcome-file-list>	
 	
 	<!-- Logging Servlet -->
 	<servlet>
