--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/pom.xml
@@ -455,6 +455,14 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>9.4.1212</version>
+		    <type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 
 </project>
