--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/sap/web.xml
@@ -82,7 +82,7 @@
 	<!-- Security -->
 	
 	<listener>
-		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+		<listener-class>org.eclipse.dirigible.air.init.InitializationListener</listener-class>
 	</listener>
 
 	<login-config>
