--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/saptrial/web.xml
@@ -81,7 +81,7 @@
 	</resource-ref>
 	
 	<listener>
-		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+		<listener-class>org.eclipse.dirigible.air.init.InitializationListener</listener-class>
 	</listener>
 	
 </web-app>
