--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/trial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/air.tomcat/src/web/trial/web.xml
@@ -71,7 +71,7 @@
 	-->
 	
 	<listener>
-		<listener-class>org.eclipse.dirigible.init.InitializationListener</listener-class>
+		<listener-class>org.eclipse.dirigible.air.init.InitializationListener</listener-class>
 	</listener>
 
 </web-app>
